CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20253011_1141.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_optimized.exe aco_cuda_optimized.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_optimized.cu(246): warning #68-D: integer conversion resulted in a change of sign
          if (hashTable[idx].key == -1) return -1.0;
                                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_optimized.cu(257): warning #68-D: integer conversion resulted in a change of sign
          unsigned long long old = atomicCAS(&hashTable[idx].key, -1, key);
                                                                  ^

aco_cuda_optimized.cu(258): warning #68-D: integer conversion resulted in a change of sign
          if (old == -1 || old == key) {
                     ^

aco_cuda_optimized.cu(290): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

aco_cuda_optimized.cu(1306): error: identifier "threads" is undefined
                  if (threads > 42) break;
                      ^

aco_cuda_optimized.cu(1314): error: identifier "new_shared_matrices" is undefined
                  size_t total_memory = new_shared_matrices + new_shared_agents;
                                        ^

aco_cuda_optimized.cu(1314): error: identifier "new_shared_agents" is undefined
                  size_t total_memory = new_shared_matrices + new_shared_agents;
                                                              ^

aco_cuda_optimized.cu(1316): error: identifier "new_total_shared" is undefined
                  if (new_total_shared <= prop.sharedMemPerBlock * 0.8f) {
                      ^

4 errors detected in the compilation of "aco_cuda_optimized.cu".
aco_cuda_optimized.cu
========== COMPILATION END ========== 
Exit code: 2 
